syntax = "proto3";
package plugins;

option go_package = "get.porter.sh/porter/pkg/secrets/plugins/proto";

message ResolveRequest {
  string KeyName = 1;
  string KeyValue = 2;
}

message CreateRequest {
  string KeyName = 1;
  string KeyValue = 2;
  string Value = 3;
}

message ResolveResponse {
  string Value = 1;
}

message CreateResponse {}

service SecretsProtocol {
  rpc Resolve(ResolveRequest) returns (ResolveResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
}
